wwr/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Signika&display=swap');

#content {
    max-width: 1600px;
    margin: 0 auto;
}

body {
    background-color: #E7EBEA;
    font-family: "Josefin Sans", 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 22px;
    margin: 0;
    padding: 0;
}

header {
    background-color: #5B8F81;
    display: grid;
    grid-template-columns: 150px auto;
}

.logo {
    width: 80px;
}

#logo_link {
    padding-top: 5px;
    justify-self: center;
    align-self: center;
}

nav {
    display: flex;
    justify-content: space-around;
}

nav a {
    text-align: center;
    color: black;
    text-decoration: none;
    padding: 35px;
}

nav a:hover {
    background-color: #13654F;
    color: white;
}

#hero {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    margin-top: -100px;
}

#hero-box {
    grid-column: 1/4;
    grid-row: 1/3;
    z-index: -1;
}

#hero-msg {
    grid-column: 2/3;
    grid-row: 1/2;
    margin-top: 100px;
}

#hero-msg h1, #hero-msg h4 {
    text-align: center;
}

#hero-msg h4 {
    color: white;
}

#hero-img {
    width: 100%;
}

.home-title {
    background-color: #4896C4;
    color: black;
    font-size: 2em;
    margin-top: 10px;
}

h4, h1 {
    color: black;
    font-family: Signika, Helvetica, sans-serif;
}

.book, .join {
    background-color: #4896C4;
    color: black;
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}

.book:hover, .join:hover {
    background-color: #285d7b;
    color: white;
}

.button-box {
    text-align: center;
}

.home-grid {
    display: grid;
    grid-template-columns: repeat(10, 1fr);
}

main section {
    text-align: center;
}

main section img {
    box-sizing: border-box;
}

h2 {
    margin: 0;
}

.card-img, .equipment-img-cards{
    border: 10px solid #285d7b;
    transition: transform .5s;
    box-shadow: 5px 5px 10px black;
}

.card-img:hover {
    opacity: .6;
    transform: scale(1.1);
}

.rivers-card, .camping-card, .rapids-card {
    margin: 200px 0;
}

.rivers-card {
    grid-column: 2/4;
    grid-row: 2/3;
}

.camping-card {
    grid-column: 5/7;
    grid-row: 2/3;
}

.rapids-card {
    grid-column: 8/10;
    grid-row: 2/3;
}

#background{
    height: 725px;
    background-color: #13654F;
    grid-column: 1/11;
    grid-row: 4/9;
}

.mountains {
    grid-column: 2/7;
    grid-row: 5/8;
    box-shadow: 5px 5px 10px black;
}

.card-img, .mountains {
    width: 100%;
}

.msg {
    background-color: #285d7b;
    line-height: 1.5em;
    padding: 35px;
    grid-column: 6/10;
    grid-row: 6/7;
    box-shadow: 5px 5px 10px black;
}

.msg h2 {
    color: white;
}

.msg p {
    color: white;
    font-size: .8em;
    padding-bottom: 15px;
}

footer {
    background-color: #285d7b;
    color: white;
    padding: 25px 50px;
    margin-top: 200px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

footer a {
    color: #E7EBEA;
    text-decoration: none;
}

footer a:hover{
    color: #19c899;
}

footer p{
    font-size: 1.2em;
}

footer p:hover{
    text-decoration: underline;
}

footer .social img {
    padding-top: 15px;
}

.icon {
    width: 80px;
    padding-top: 10px;
}

/* Equipment Styling */

.equipment-grid {
    align-items: center;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: 60px 1fr 1fr;
    gap: 20px;
    margin: 50px;
}

.equipment-title {
    grid-column: 1/6;
    grid-row: 1/2;
    width: 100%;
    background-color: #285d7b;
}

.equipment-title h1 {
    color: #E7EBEA;
}

.body-text {
    grid-column: 1/3;
    grid-row: 2/4;
    font-size: .8em;
    text-align: left;
    padding-left: 20px;
}

.sandal-card {
    grid-column: 3/4;
}

.lifejacket-card {
    grid-column: 4/5;
}

.brimmedhat-card {
    grid-column: 5/6;
}

.sunglasses-card {
    grid-column: 3/4;
    grid-row: 3/4;
}

.waterbottle-card {
    grid-column: 4/5;
    grid-row: 3/4;
}

.sunscreen-card {
    grid-column: 5/6;
    grid-row: 3/4;
}
.equipment-grid h2 {
    font-size: 1em;
    padding-top: 10px;
}


/* Don't touch below here. */

@media screen and (max-width: 900px) {
    #hero, .home-grid {
        display: block;
        height: auto;
    }
    nav, footer {
        flex-direction: column;
    }
    nav a {
        display: block;
        padding: 15px;
    }
    #hero {
        margin-top: 0;
    }
    #hero-msg {
        margin-top: 0;
    }
    #hero-msg h4 {
        display: none;
    }
    .home-title {
        font-size: 25px;
        color: #6f7364;
    }
    .rivers-card, .camping-card, .rapids-card { 
        margin: 50px auto;
        width: 60%;
    }
    #background {
        display: none;
    }
    .mountains, .msg {
        width: 80%;
        display: block;
        margin: 0 auto;
    }
    footer {
        margin-top: 25px;
    }
}

